--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,10 +1,11 @@
-run_build:
+stages: [compile, run, test]
+
+run_compile:
     image: gitlab-registry.mpcdf.mpg.de/mpcdf/module-image
-    stage: build
+    stage: compile
     tags:
         - modules
     before_script:
-        - module avail
         - module load intel/2023.1.0.x impi/2021.9 hdf5-mpi
     script:
         - make FC=mpiifort
@@ -14,14 +15,25 @@ run_build:
 
 run_run:
     image: gitlab-registry.mpcdf.mpg.de/mpcdf/module-image
-    stage: test
+    stage: run
     tags:
         - modules
     before_script:
-        - module avail
         - module load intel/2023.1.0.x impi/2021.9 hdf5-mpi
     script:
         - make run2
     artifacts:
         paths:
             - fast.h5
+
+run_test:
+    image: gitlab-registry.mpcdf.mpg.de/mpcdf/module-image
+    stage: test
+    tags:
+        - modules
+    before_script:
+        - module load intel/2023.1.0.x impi/2021.9 hdf5-mpi
+    script:
+        - h5ls -r fast.h5
+        - h5dump -d /ID_PIC fast.h5
+        - h5dump -d /S_PIC fast.h5
